<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ThirdActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarTA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageViewTAIV"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:src="@drawable/ic_shop" />

    <EditText
        android:id="@+id/nameTAET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:autofillHints=""
        android:hint="@string/name"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/costTAET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:autofillHints=""
        android:hint="@string/cost"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/descriptionTAET"
        android:layout_width="wrap_content"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:hint="@string/description"
        android:textSize="32sp"
        tools:ignore="Autofill,TextFields" />

    <Button
        android:id="@+id/saveBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/save"
        android:textSize="32sp"/>
</LinearLayout>