<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SecondActivity">

    <Button
        android:id="@+id/exitBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="300dp"
        android:padding="8dp"
        android:text="@string/exit" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/editImageIV"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="32dp"
            android:src="@drawable/ic_shop" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="6"
            android:orientation="vertical"
            tools:ignore="InefficientWeight">

            <EditText
                android:id="@+id/nameET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/name"
                android:textSize="22sp"
                tools:ignore="Autofill,TextFields" />

            <EditText
                android:id="@+id/costET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cost"
                android:textSize="26sp"
                tools:ignore="Autofill,TextFields" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/addBTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:text="@string/add"
        android:textSize="22sp"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/listViewLV"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/list_item" />

</LinearLayout>